changed loading gif

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -593,3 +593,28 @@ sun_moon_change {
   padding: 0;
   margin:0;
 }
+
+.loading-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.85);
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.loader {
+  /* border: 8px solid #f3f3f3;
+  border-top: 8px solid #3498db;
+  border-radius: 50%; */
+  width: 50px;
+  height: 50px;
+  animation: rotate 2s linear infinite;
+  background: url('../images/loading.gif') center no-repeat;
+  background-size: cover;
+}
