--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -600,7 +600,7 @@ sun_moon_change {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.85);
+  background-color: #181a1b;
   z-index: 9999;
   display: flex;
   justify-content: center;
